feat: btn more change

--- a/html/about.html
+++ b/html/about.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/page-about.css">
     <link rel="stylesheet" href="../css/pointer.css">
     <link rel="stylesheet" href="../css/blog.css">
-    <link rel="stylesheet" href="..css/scroll-text.css">
+    <link rel="stylesheet" href="../css/scroll-text.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -32,7 +32,7 @@
         </ul>
     </navbar>
     
-    <div class="grid" style="height: calc(3vw * 11 + .1em);"></div>
+    <div class="grid" style="bottom: 7vw;"></div>
     <section>
         <h1>About</h1>
     </section>
@@ -46,7 +46,7 @@
             <div class="div-row" style="width: 100%; margin: 0;">
                 <div class="div-column" style="width: 60%; margin-left: 0;">
                     <h3>Experience</h3>
-                    <p>I studied in Bordeaux for two years and got my <a class="link-in-text" href="https://www.mmibordeaux.com/">Diploma of Higher Education in Multimedia and Internet</a>. Then I started a <a class="link-in-text" href="https://miami.iut-tarbes.fr/">Vocational Degree about video games and Interactive Media</a> in Tarbes, while working at <a class="link-in-text" href="https://www.blanket-games.com/">BlanketGames</a> in Toulouse. I'm currently enrolled at <a class="link-in-text" href="https://enjmin.cnam.fr/enjmin/ecole-nationale-du-jeu-et-des-medias-interactifs-accueil-1126103.kjsp">CNAM ENJMIN</a> in Angoulême and studying for my master's degree in game programming.</p>    
+                    <p>I studied in Bordeaux for two years and got my <a class="link-in-text" href="https://www.mmibordeaux.com/" target="_blank">Diploma of Higher Education in Multimedia and Internet</a>. Then I started a <a class="link-in-text" href="https://miami.iut-tarbes.fr/" target="_blank">Vocational Degree about video games and Interactive Media</a> in Tarbes, while working at <a class="link-in-text" href="https://www.blanket-games.com/" target="_blank">BlanketGames</a> in Toulouse. I'm currently enrolled at <a class="link-in-text" href="https://enjmin.cnam.fr/enjmin/ecole-nationale-du-jeu-et-des-medias-interactifs-accueil-1126103.kjsp" target="_blank">CNAM ENJMIN</a> in Angoulême and studying for my master's degree in game programming. This summer I also had the chance to do a two months internship at <a class="link-in-text" href="https://www.virtuosgames.com/" target="_blank">Virtuos</a> Paris.</p>    
                     <p>Here are my English and French curriculum. Don't worry, no download it opens in a blank page :D</p>
                 </div>
                 <div class="div-column" style="width: 40%; margin-left : 50px;">
