fix: curriculum sentence

--- a/html/about.html
+++ b/html/about.html
@@ -47,7 +47,7 @@
                 <div class="div-column" style="width: 60%; margin-left: 0;">
                     <h3>Experience</h3>
                     <p>I studied in Bordeaux for two years and got my <a class="link-in-text" href="https://www.mmibordeaux.com/" target="_blank">Diploma of Higher Education in Multimedia and Internet</a>. Then I started a <a class="link-in-text" href="https://miami.iut-tarbes.fr/" target="_blank">Vocational Degree about video games and Interactive Media</a> in Tarbes, while working at <a class="link-in-text" href="https://www.blanket-games.com/" target="_blank">BlanketGames</a> in Toulouse. I'm currently enrolled at <a class="link-in-text" href="https://enjmin.cnam.fr/enjmin/ecole-nationale-du-jeu-et-des-medias-interactifs-accueil-1126103.kjsp" target="_blank">CNAM ENJMIN</a> in Angoulême and studying for my master's degree in game programming. This summer I also had the chance to do a two months internship at <a class="link-in-text" href="https://www.virtuosgames.com/" target="_blank">Virtuos</a> Paris.</p>    
-                    <p>Here are my English and French curriculum. Don't worry, no download it opens in a blank page :D</p>
+                    <p>Here are my English and French curriculum :)</p>
                 </div>
                 <div class="div-column" style="width: 40%; margin-left : 50px;">
                     <div class="project-window2" href="./html/index/jeu_video.html" style="height: 200px; margin: 0;">
