--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             
             <div>
                 <h3>Experience</h3>
-                <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working at working at BlanketGames in Toulouse.</p>    
+                <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working at BlanketGames in Toulouse. I'm currently enrolled at CNAM ENJMIN in Angoulême and studying for my master's degree in game programming. This summer I also had the chance to do a two months internship at Virtuos Paris.</p>    
                 <a href="html/about.html#experience-section" class="btn1 btn-more">More ►</a>
             </div>
             
