feat: rolling food chain complete

--- a/html/projects/video-games/rolling-food-chain.html
+++ b/html/projects/video-games/rolling-food-chain.html
@@ -41,16 +41,15 @@
     <section id="blog-section" class="div-row">
         <div class="div-column">
             <p id="hashtags"><b>2024</b> <b>Unity</b> <b>GMTK</b></p>
-            <p>At the end of 2023, I had the chance to participate in the <a class="link-in-text" href="https://www.ubisoft.com/en-us/company/careers/interns-graduates/develop-at-ubisoft" target="_blank">Develop At Ubisoft Program</a>.</p>
-            <p>For this project we had no engine, just a library (NextAPI) given by Ubisoft that allowed us to display sprites, read inputs and play sounds in a window. This was a solo project done in a few months, only working in the evening and the weekend (all sounds and music are done by Mael Heurard though, big thanks to him).</p>
-            <p>Your goal as the player is to secure most of the map to avoid slime spawn and free the caves. I wanted to convey the same feeling that I had playing Minecraft, a sense of safeness linked to the light.</p>
-            <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yLAeb2AkPhU?si=Kb5dK7Uc2LRO36s2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <p>For GMTK JAM 2024, I participated in a team of three with <a class="link-in-text" href="https://x.com/hookariagames" target="_blank">Paci</a> and <a class="link-in-text" href="https://x.com/ZakkuMusic" target="_blank">Zakku</a>. Exceptionally this year the jam was four days long. I was the main programmer, with a little help from Paci the last two days as I had to work on monday and tuesday.</p>
+            <p>The concept of the game was fairly simple. Inspired by the jam theme "Built to scale" we decided to make a mix between <a class="link-in-text" href="https://store.steampowered.com/app/1794680/Vampire_Survivors/" target="_blank">Vampire Survivors</a> and <a class="link-in-text" href="https://store.steampowered.com/app/848350/Katamari_Damacy_REROLL/" target="_blank">Katamari Damacy</a>, where the player needs to eat the monsters all around to grow bigger and make enough point that they can feed themselves to the boss. They need to do so in time (2 minutes per round) otherwise it's game over.</p>
+            <div class="div-row" style="width: 100%; height: 40rem; margin-bottom: 1rem;">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/6FgNzS_TUoE?si=2EZeDYT8YBTZriit" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <p>I had only used C++ on a few really small projects before, so this was a huge first for me. The fact that we had no engine and everything was done in the code was also really interesting and made this game a big learning experience.</p>
+            <p>Overall this was a really good experience, we ended up ranking 184th out of 7604, and we're pretty happy with the result.Many people enjoyed the game and it's always super cool to see people have fun with what you create :) </p>
             <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/luminar-expedition/le-playing.jpg" style="width: 49%;">
-                <img src="../../../img/video-games/luminar-expedition/le-trophy.jpg" style="width: 49%;">
+                <img src="../../../img/video-games/rolling-food-chain/rfc-gameplay.gif" style="width: 49%;">
+                <img src="../../../img/video-games/rolling-food-chain/rfc-intro.gif" style="width: 49%;">
             </div> 
         </div>
 
@@ -60,7 +59,7 @@
                     <p class="project-window-title" id="project-id">PLAY</p>
                 </div>
                 <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
-                    <a class="external-link" href="https://alvina-dr.itch.io/luminar-expedition" target="_blank">Discover the game</a>
+                    <a class="external-link" href="https://zakkuu.itch.io/roll-the-food-chain" target="_blank">Discover the game</a>
                 </div>
             </div>
 
