--- a/html/projects/video-games/space-love-blouge.html
+++ b/html/projects/video-games/space-love-blouge.html
@@ -41,14 +41,12 @@
     <section id="blog-section" class="div-row">
         <div class="div-column">
             <p id="hashtags"><b>2023</b> <b>Unity</b> <b>Alternative Output</b> <b>Alternative Controller</b></p>
-            <p>For our end of the year project, we had the idea to make a sort of mix between Spiderman and Shadow of the Colossus. In other words, a really dynamic controller and huge creatures to take down quickly.</p>
+            <p>In october 2023 we took up the challenge to make a game in a week that used an alternative output (something that was not simply a screen). It was a project included in the curriculum of our school (ENJMIN) and we were a team of ten. I was the main programmer on the Unity project while the other programmer worked on the Arduino side of the game.</p>
             <p>We had three months to make the game with a team of seven. We were two programmers, and while I was working full time on the project, the other dev could only be there half of the time as they were working on two games.</p>
-            <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
+            <div class="div-row" style="width: 100%; height: 40rem; margin-bottom: 1rem;">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/sa6amw7IkfU?si=LAH26X4pU59kYhW3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <p>This game used physic much more than any other game I had done before and led to lots of pretty complex actions. The first thing to design was the swinging part.</p>
-            <h3>Swinging</h3>
-            <p>For this part, I first tried to look into what Spiderman actually does. One of the big questions I had, was how do we know which point to use to swing. After searching a bit on the internet I found this conference that at some points explains how the swinging points are defined : <a class="link-in-text" href="https://www.youtube.com/embed/sa6amw7IkfU?si=LAH26X4pU59kYhW3" target="_blank">Classic Game Design Postmortem: Swinging with Spider-Man (GDC)</a>.</p>
             <p>Basically what you do is you trace a cone of raycast. If a raycast hits something, it saves the collided object and the point of collision in a list. Once all collisions have been saved, we then calculate the distance between each one and a defined point that we call "perfect swinging point" which the game designers can move around to influence how we want our average swing curve to feel like.</p>
             <p>Now, in our game we had two raycast cone like this, which means that calculation done every frame was huge. To help with performance, what we did was to divide this calculation on several frame instead of just one. The calculation of the swinging point would be less precise but we would get more FPS.</p>
             <p>To do that we </p>
