feat: space love and blouge page complete + nadir still WIP

--- a/html/projects/video-games/diver-down.html
+++ b/html/projects/video-games/diver-down.html
@@ -42,15 +42,15 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column">
-            <p><b>2023</b> <b>Unity</b> <b>Zenject</b> <b>HDRP</b></p>
+            <p><b>2023</b> <b>Unity</b> <b>HDRP</b> <b>Tech Art</b></p>
             <p>Diver Down is the result of my third EMMI Jam (a jam that we organise between MMI and the ENSEIRB which is an engineer school in Bordeaux). We had a team of five and were two devs, which allowed me to focus on the graphic side of the game.</p>
             <p>The initial game was already looking pretty good for a 48 hours jam and it caught the eye of the jury (composed from video game developers from Asobo, Ubisoft, Shiro Games and more). We ranked first place and won pretty <a class="link-in-text" href="https://store.steampowered.com/app/1182900/A_Plague_Tale_Requiem/" target="_blank">A Plague Tale : Requiem</a> artbooks.</p>
             <p></p>
             <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/x7fhf7v0gUM?si=LZGMtZXwB7isp0jE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <p>This game was a great opportunity to improve my technical art skills so after the jam was over I kept working on it. I switched the whole project to HDRP and learned how to use volumetric lights and fog or make a see through wall shader. On top of the gameplay programming, I did a bit of 3d modeling with Blender which I had tried a few time already and I really enjoy.</p>
-            <p>It's one of the games I'm the most proud to show people and to this day I'm still adding bits here and there to make it better.</p>
+            <p>This game was a great opportunity to improve my technical art skills so after the jam was over I kept working on it. I switched the whole project to HDRP and learned how to use volumetric lights and fog or make a see through wall shader. On top of the gameplay programming, I did a bit of 3D modeling with Blender which I had tried a few time already and I really enjoy.</p>
+            <p>It's one of the games where I was able to push the graphical aspect the most (as a programmer) so I'm really fond of it !</p>
         </div>
         
         <div class="div-column">
