--- a/html/projects/video-games/nadir-giant-hunter.html
+++ b/html/projects/video-games/nadir-giant-hunter.html
@@ -53,12 +53,12 @@
             <p>Now, in our game we had two raycast cone like this, which means that calculation done every frame was huge. To help with performance, what we did was to divide this calculation on several frame instead of just one. The calculation of the swinging point would be less precise but we would get more FPS.</p>
             <p>To do that we </p>
             <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/nadir/ngh-gdc-explanation.jpg" style="width: 49%;">
-                <img src="../../../img/video-games/overboss/overboss-sidequest.jpg" style="width: 49%;">
+                <img src="../../../img/video-games/nadir/ngh-gdc-explanation.png" style="width: 49%;">
+                <img src="../../../img/video-games/nadir/ngh-grapple-detection.png" style="width: 49%;">
             </div> 
-            <p>I added a few things to the gameplay like Command Cards for example (bonuses that you can use when you make the pattern indicated on them with your tiles), but mostly had a part in the UI side of the game. There was a lot to rework (things had been done quickly before my arrival to fit the demo release deadline) and we had to make it gamepad compatible as the game would release on several consoles. Overboss would also be translated in many languages (spanish, german, korean, japanese, etc...) which means that all UI needed to accomodate to longer or shorter texts.</p>
-            <p>Gamepad and localization being added afterward and not during the development was a huge slowdown and made the task much more laborious.</p>
-            <p>Overboss was also the occasion to participate to the debug phase. There was a lot of work to do on this part, and it took several months (and was still ongoing when I left). But I learned a lot about the debugging process and it has helped me greatly in the long run.</p>
+            <p>WIP</p>
+            <p>WIP</p>
+            <p>WIP</p>
         </div>
 
         <div class="div-column">
