feat: cv update

--- a/html/about.html
+++ b/html/about.html
@@ -79,13 +79,14 @@
 
     </section>
 
+    <!-- SCROLLING TEXT -->
     <div class="scroll-text-div">
         <div style="width: 10000000px">
             <div class="scroll-text" >
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
+                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . TECH ART . TOOL DEVELOPMENT . PROTOTYPING . </h5>
             </div>
             <div class="scroll-text">
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
+                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . TECH ART . TOOL DEVELOPMENT . PROTOTYPING . </h5>
             </div>
         </div>
     </div>
