--- a/html/projects/video-games/nadir-giant-hunter.html
+++ b/html/projects/video-games/nadir-giant-hunter.html
@@ -56,9 +56,9 @@
                 <img src="../../../img/video-games/nadir/ngh-gdc-explanation.png" style="width: 49%;">
                 <img src="../../../img/video-games/nadir/ngh-grapple-detection.png" style="width: 49%;">
             </div> 
-            <p>WIP</p>
-            <p>WIP</p>
-            <p>WIP</p>
+            <p>In Nadir the player can interact with three types of "spots" when they are close enough. The ennemis' weak spot, the dash spot and the bumpers. </p>
+            <p>Nadir is a gamepad first game, with fully remappable inputs.</p>
+            <p>Since we wanted to participate to the Busan Indie Connect Festival, I set up the Unity Localization System on the project. That way the game was playable in English, French and Korean.</p>
         </div>
 
         <div class="div-column">
