feat: add text highlight style + nadir giant hunter WIP

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         <section id="about-section">
             <div>
                 <h3>About me</h3>
-                <p>Hi there ! I'm a french student, currently enrolled at ENJMIN in Angoulême. I enjoy making video games and programming in general. Big Doctor Who and Percy Jackson fan, I also love playing narrative video games such as Outer Wilds, Disco Elysium or Detroit Become Human. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p>   
+                <p>Hi there ! I'm Alvina, a <span class="text-highlight">french student</span>, currently enrolled at <a class="link-in-text" href="https://enjmin.cnam.fr/enjmin/ecole-nationale-du-jeu-et-des-medias-interactifs-accueil-1126103.kjsp" target="_blank">ENJMIN</a> in Angoulême. I love playing narrative video games such as <span class="text-highlight">Outer Wilds</span> or <span class="text-highlight">Disco Elysium</span>.<br> <span class="text-highlight">Telling stories and learning</span> are two big aspects of my life and I think that both these things can <span class="text-highlight">mix in video games</span> which is something I really want to <span class="text-highlight">convey in what I do</span>.</p>   
                 <a href="html/about.html#about-me-section" class="btn1 btn-more">More ►</a>
             </div>
             
             <div>
                 <h3>Experience</h3>
-                <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working at BlanketGames in Toulouse. I'm currently enrolled at CNAM ENJMIN in Angoulême and studying for my master's degree in game programming. This summer I also had the chance to do a two months internship at Virtuos Paris.</p>    
+                <p>I studied in Bordeaux for two years and got my <a class="link-in-text" href="https://www.mmibordeaux.com/" target="_blank">Diploma of Higher Education in Multimedia and Internet</a>. Then I started a <a class="link-in-text" href="https://miami.iut-tarbes.fr/" target="_blank">Vocational Degree about video games and Interactive Media</a> in Tarbes, while working at <a class="link-in-text" href="https://twitter.com/Blanket_Games" target="_blank">BlanketGames</a> in Toulouse. I'm currently enrolled at <a class="link-in-text" href="https://enjmin.cnam.fr/enjmin/ecole-nationale-du-jeu-et-des-medias-interactifs-accueil-1126103.kjsp" target="_blank">CNAM ENJMIN</a> in Angoulême and studying for my <span class="text-highlight">master's degree in game programming</span>. This summer I also had the chance to do a two months internship at <a class="link-in-text" href="https://www.virtuosgames.com/" target="_blank">Virtuos</a> Paris.</p>    
                 <a href="html/about.html#experience-section" class="btn1 btn-more">More ►</a>
             </div>
             
