--- a/html/projects/video-games/nadir-giant-hunter.html
+++ b/html/projects/video-games/nadir-giant-hunter.html
@@ -41,21 +41,37 @@
     <section id="blog-section" class="div-row">
         <div class="div-column">
             <p id="hashtags"><b>2024</b> <b>Unity</b> <b>Gamepad</b> <b>Localization</b> <b>Remapping</b></p>
-            <p>For our end of the year project, we had the idea to make a sort of mix between Spiderman and Shadow of the Colossus. In other words, a really dynamic controller and huge creatures to take down quickly.</p>
-            <p>We had three months to make the game with a team of seven. We were two programmers, and while I was working full time on the project, the other dev could only be there half of the time as they were working on two games.</p>
+            <p>For our end of the year project, we had the idea to make a sort of <span class="text-highlight">mix between Spiderman and Shadow of the Colossus</span>. In other words, a really <span class="text-highlight">dynamic controller</span> and <span class="text-highlight">huge creatures to take down quickly</span>.</p>
+            <p>We had three months to make the game with a <span class="text-highlight">team of seven</span>. We were <span class="text-highlight">two programmers</span>, and while I was working full time on the project, the other dev could only be there half of the time as they were working on two games.</p>
             <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/envc8_SKGg4?si=FSxHPLorRDLAoSTd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <p>This game used physic much more than any other game I had done before and led to lots of pretty complex actions. The first thing to design was the swinging part.</p>
+            <p>This game used <span class="text-highlight">physics</span> much more than any other game I had done before and led to lots of pretty complex actions. The first thing to design was the swinging part.</p>
             <h3>Swinging</h3>
-            <p>For this part, I first tried to look into what Spiderman actually does. One of the big questions I had, was how do we know which point to use to swing. After searching a bit on the internet I found this conference that at some points explains how the swinging points are defined : <a class="link-in-text" href="https://youtu.be/5T1hnau158M?si=UZ7K8-DZiZsFD34D" target="_blank">Classic Game Design Postmortem: Swinging with Spider-Man (GDC)</a>.</p>
-            <p>Basically what you do is you trace a cone of raycast. If a raycast hits something, it saves the collided object and the point of collision in a list. Once all collisions have been saved, we then calculate the distance between each one and a defined point that we call "perfect swinging point" which the game designers can move around to influence how we want our average swing curve to feel like.</p>
-            <p>Now, in our game we had two raycast cone like this, which means that calculation done every frame was huge. To help with performance, what we did was to divide this calculation on several frame instead of just one. The calculation of the swinging point would be less precise but we would get more FPS.</p>
-            <p>To do that we </p>
+            <p>For this part, I first tried to <span class="text-highlight">look into what Spiderman actually does</span>. One of the big questions I had, was how do we know which point to use to swing. After searching a bit on the internet I found this conference that at some points explains how the swinging points are defined : <a class="link-in-text" href="https://youtu.be/5T1hnau158M?si=UZ7K8-DZiZsFD34D" target="_blank">Classic Game Design Postmortem: Swinging with Spider-Man (GDC)</a>.</p>
             <div class="div-row" style="width: 100%;">
                 <img src="../../../img/video-games/nadir/ngh-gdc-explanation.png" style="width: 49%;">
                 <img src="../../../img/video-games/nadir/ngh-grapple-detection.png" style="width: 49%;">
             </div> 
+            <p>Basically what you do is you <span class="text-highlight">trace a cone of raycast</span>. If a raycast hits something, it <span class="text-highlight">saves the collided object and the point of collision</span> in a list. Once all collisions have been saved, we then calculate the distance between each one and a defined point that we call <span class="text-highlight">"perfect swinging point"</span> which the game designers can move around to influence how we want our average swing curve to feel like. We then <span class="text-highlight">select the collision point that's the closest to our perfect swinging point</span>.</p>
+            <p>Now, in our game we had two raycast cone like this, which means that calculation done every frame was huge. To help with <span class="text-highlight">performance</span>, what we did was to <span class="text-highlight">divide this calculation on several frames</span> instead of just one. The calculation of the swinging point would be less precise but we would get more FPS.</p>
+            <p>The thing is, if you only do one cone raycast then you miss lots of opportunities to grapple at stuff in the environment. For example, you might <span class="text-highlight">miss the ceiling right above your head since it's in the middle of the cone</span>. We decided to do something similar to the conference linked before and to <span class="text-highlight">make the cone grow overtime</span>. This means that the cone will start with a really small radius and while the player holds the input to swing, the cone will get bigger and bigger. That way we include many more possibilities.</p>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/nadir/ngh-cone-raycast-example.gif" style="width: 32%;">
+                <img src="../../../img/video-games/nadir/ngh-cone-raycast-perfect-point.png" style="width: 32%;">
+                <div style="width: 32%;">
+                    <img style="width: 100%; margin-bottom: 0;" src="../../../img/video-games/nadir/ngh-cone-raycast-radius-step.png"> 
+                    <p>Example of radius step</p>
+                </div>
+                
+            </div> 
+            <p>The cone raycast had parameters like following : <br>
+            <span class="text-highlight">Angle precision</span> : The <span class="text-highlight">number of raycast in a circle</span> => for example we could do a 360 raycast circle if we want a lot of precision - one per degree - or only 90 if we want to have more performance.<br>
+            <span class="text-highlight">Minimum Radius</span> : The minimum size of the cone radius, at which the cone starts when the player tries to swing.<br>
+            <span class="text-highlight">Maximum Radius</span> : The maximum size of the cone radius, reached if the swing input is not released for some times.<br>
+            <span class="text-highlight">Raycast Length</span> : This parameter was not in the ConeRaycast script but in the swinging parameters (in the player data). Still, it was a really important variable for the cone behavior.<br>
+            <span class="text-highlight">Radius Precision</span> : The number of step between the Minimum Radius and the Maximum Radius. The higher it is, the more precise the collision detection will be, but it will also cost more performance.</p>
+
             <p>In Nadir the player can interact with three types of "spots" when they are close enough. The ennemis' weak spot, the dash spot and the bumpers. </p>
             <p>Nadir is a gamepad first game, with fully remappable inputs.</p>
             <p>Since we wanted to participate to the Busan Indie Connect Festival, I set up the Unity Localization System on the project. That way the game was playable in English, French and Korean.</p>
