--- a/html/projects/video-games/nadir-giant-hunter.html
+++ b/html/projects/video-games/nadir-giant-hunter.html
@@ -81,7 +81,7 @@
             <span class="text-highlight">Maximum Radius</span> : The maximum size of the cone radius, reached if the swing input is not released for some times.<br>
             <span class="text-highlight">Raycast Length</span> : This parameter was not in the ConeRaycast script but in the swinging parameters (in the player data). Still, it was a really important variable for the cone behavior.<br>
             <span class="text-highlight">Radius Precision</span> : The number of step between the Minimum Radius and the Maximum Radius. The higher it is, the more precise the collision detection will be, but it will also cost more performance.</p>
-
+            <h3>Interaction</h3>
             <p>In Nadir the player can interact with three types of "spots" when they are close enough. The enemis' weak spot, the dash spot and the bumpers. </p>
             <p>Nadir is a gamepad first game, with fully remappable inputs.</p>
             <p>Since we wanted to participate to the Busan Indie Connect Festival, I set up the Unity Localization System on the project. That way the game was playable in English, French and Korean.</p>
